--- a/fool/index.html
+++ b/fool/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="DoneyOS">
     <meta name="robots" content="index, follow">
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body style="
     margin: 0;
