--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="robots" content="index, follow">
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=SN+Pro:ital,wght@0,200..900;1,200..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="head"></div>
@@ -26,14 +29,13 @@
     </a></div>
     <br>
     <p class="not-clicked font">Doney doesn't like how you didn't click on the picture &lt;/3</p>
-    <br>
     <p class="clicked font">WAIT YOU CLICKED? YOOOO &lt;3</p>
     <br>
     <h4 class="font">This is how I'm glazing myself rn:</h4>
-    <br>
     <div class="gif">
       <img src="gif/glaze.gif" alt="Glazing donuts gif" id="gif">
     </div>
+    <br>
     <br>
     <div class="link-div">
   <a href="https://fool.doneyos.org" 
